Fix footer z-index

--- a/css/style.css
+++ b/css/style.css
@@ -2713,7 +2713,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 2000;
   background: var(--black);
   border-top: none;
   padding: 8px 0;
